
SVN
-------------------------------

XML:   Resolved issue CASTOR-1643 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Remove new tree of tests of known bugs (reverse changes of CASTOR-1640)
       Details: http://jira.codehaus.org/browse/CASTOR-1643
       (Edward - 20061020)

XML:   Resolved issue CASTOR-1641 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Enhance UNIX CTFRun.sh script
       Details: http://jira.codehaus.org/browse/CASTOR-1641
       (Edward - 20061019)

ALL:   Resolved issue CASTOR-1637 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update to checkstyle rule set
       Details: http://jira.codehaus.org/browse/CASTOR-1637
       (Edward - 20061019)

XML:   Resolved issue CASTOR-1640 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add new tree of tests of known bugs
       Details: http://jira.codehaus.org/browse/CASTOR-1640
       (Edward - 20061019)

XML:   Resolved issue CASTOR-1639 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Refactor CTF test-with-reference-document
       Details: http://jira.codehaus.org/browse/CASTOR-1639
       (Edward - 20061019)

JDO:   Resolved issue CASTOR-1581 using contribution from Holger West [holger.west@syscon-informatics.de]
       Added database appender for log4j through CastorJDO.
       Details: http://jira.codehaus.org/browse/CASTOR-1581
       (Ralf - 20061019)

XML:   Resolved issue CASTOR-1638 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Remove trailing blanks in release notes
       Details: http://jira.codehaus.org/browse/CASTOR-1638
       (Edward - 20061019)

XML:   Resolved issue CASTOR-1636 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based corrections in javasource
       Details: http://jira.codehaus.org/browse/CASTOR-1636
       (Edward - 20061019)
