@@ -2,6 +2,12 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1645 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with incorrect handling of elememt references to global elements 
+       within complex type definitions during code generation.
+       Details: http://jira.codehaus.org/browse/CASTOR-1645
+       (Werner - 20061022)
+
 XML:   Resolved issue CASTOR-1643 using contribution from Edward Kuns [edward.kuns@aspect.com]
        Remove new tree of tests of known bugs (reverse changes of CASTOR-1640)
        Details: http://jira.codehaus.org/browse/CASTOR-1643
